# permucn

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: bioconda-pr.yml  conda-recipe.yml  publish-pypi.yml  release.yml  tests.yml
conda-recipe/: README.md  meta.yaml
permucn/: __init__.py  cache.py  cli.py  events.py  io.py  multiple_testing.py  permutation.py  report.py  stats_binary.py  stats_fisher.py  stats_rate.py  testdata.py  trait_ml.py  tree.py  viz.py
scripts/: update_conda_recipe.py
test_data/: README.md
test_data/polar_fish/: README.md  species_trait.tsv
test_data/polar_fish/cafe_output/: Gamma_branch_probabilities.tab  Gamma_category_likelihoods.txt  Gamma_clade_results.txt  Gamma_family_likelihoods.txt  Gamma_family_results.txt  Gamma_results.txt
test_data/toy_example/: README.md  species_trait.tsv
test_data/toy_example/cafe_output/: Gamma_asr.tre  Gamma_branch_probabilities.tab  Gamma_change.tab  Gamma_family_results.txt
tests/: test_cache.py  test_cli_integration.py  test_io_trait_detection.py  test_multiple_testing.py  test_permutation_constraints.py  test_rate_and_args.py  test_stats_fisher.py  test_testdata.py  test_trait_ml_logic.py  test_tree_species_mismatch.py  test_user_testdata.py
wiki/: Algorithm-Notes.md  CLI-Reference.md  FAQ.md  Getting-Started.md  Home.md  Input-Format.md  Output-Interpretation.md  _Sidebar.md
