[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "permucn"
version = "0.1.0"
description = "Permutation-based test for copy-number and binary trait association"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "permucn"}
]
dependencies = []

[project.scripts]
permucn = "permucn.cli:main"

[tool.setuptools]
packages = ["permucn"]
