[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "permucn"
version = "0.1.0"
description = "Permutation-based test for copy-number and binary trait association"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
  {name = "permucn"}
]
dependencies = []
keywords = ["cafe", "copy-number", "phylogeny", "permutation-test", "comparative-genomics"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.urls]
Homepage = "https://github.com/mkrg01/permucn"
Repository = "https://github.com/mkrg01/permucn"
Issues = "https://github.com/mkrg01/permucn/issues"

[project.optional-dependencies]
plots = ["matplotlib>=3.8"]

[project.scripts]
permucn = "permucn.cli:main"

[tool.setuptools]
packages = ["permucn"]
